@@ -43,7 +43,8 @@ using strcmp().
 
 <!-- ##### TYPEDEF GQuark ##### -->
 <para>
-A GQuark is an integer which uniquely identifies a particular string.
+A GQuark is a non-zero integer which uniquely identifies a particular string.
+A GQuark value of zero is associated to %NULL.
 </para>
 
 
@@ -55,7 +56,7 @@ If the string does not currently have an associated #GQuark, a new
 </para>
 
 @string: a string.
-@Returns: the #GQuark identifying the string.
+@Returns: the #GQuark identifying the string, or 0 if @string is %NULL.
 
 
 <!-- ##### FUNCTION g_quark_from_static_string ##### -->
@@ -76,7 +77,7 @@ GTK+ theme engines).
 </para>
 
 @string: a string.
-@Returns: the #GQuark identifying the string.
+@Returns: the #GQuark identifying the string, or 0 if @string is %NULL.
 
 
 <!-- ##### FUNCTION g_quark_to_string ##### -->
@@ -90,8 +91,8 @@ Gets the string associated with the given #GQuark.
 
 <!-- ##### FUNCTION g_quark_try_string ##### -->
 <para>
-Gets the #GQuark associated with the given string, or 0 if the string has
-no associated #GQuark.
+Gets the #GQuark associated with the given string, or 0 if string is
+%NULL or it has no associated #GQuark.
 </para>
 <para>
 If you want the GQuark to be created if it doesn't already exist, use
@@ -99,8 +100,8 @@ g_quark_from_string() or g_quark_from_static_string().
 </para>
 
 @string: a string.
-@Returns: the #GQuark associated with the string, or 0 if there is no
-#GQuark associated with the string.
+@Returns: the #GQuark associated with the string, or 0 if @string is
+%NULL or there is no #GQuark associated with it.
 
 
 <!-- ##### FUNCTION g_intern_string ##### -->
