@@ -1,3 +1,7 @@
+2007-06-17  Behdad Esfahbod  <behdad@gnome.org>
+
+	* glib/tmpl/quarks.sgml:
+
 2007-06-16  Emmanuele Bassi  <ebassi@gnome.org>
 
 	* glib/tmpl/macros.sgml: Document the undefined behaviour of
